--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.5.2",
     "gulp-jshint": "^1.11.0",
     "gulp-minify-css": "^1.1.6",
